*Empty MediaWiki Message*

--- a/Ipactunen.mw
+++ b/Ipactunen.mw
@@ -11,7 +11,7 @@
 | ref2 = <ref>{{cite web|url=https://www.cia.gov/library/publications/the-world-factbook/geos/af.html|title=CIA - The World Factbook -- Afghanistan|website=www.umsl.edu}}</ref>
 | region3 = {{flagcountry|India}}
 | pop3 = 3,200,000
-| ref3 = <ref name="Ali2018">{{cite news |last1=Ali |first1=Arshad |title=Khan Abdul Gaffar Khan's great granddaughter seeks citizenship for 'Phastoons' in India |url=https://www.dnaindia.com/india/report-khan-abdul-gaffar-khan-s-great-granddaughter-seeks-citizenship-for-phastoons-in-india-2584887 |newspaper=[[Daily News and Analysis]] |accessdate=21 February 2019 |language=English |date=15 February 2018|quote=Interacting with mediapersons on Wednesday, Yasmin, the president of All India Pakhtoon Jirga-e-Hind, said that there were 32 lakh Phastoons in the country who were living and working in India but were yet to get citizenship.}}</ref>
+| ref3 = <ref name="Ali2018">{{cite news |last1=Ali |first1=Arshad |title=Khan Abdul Gaffar Khan's great granddaughter seeks citizenship for 'Phastoons' in India |url=https://www.dnaindia.com/india/report-khan-abdul-gaffar-khan-s-great-granddaughter-seeks-citizenship-for-phastoons-in-india-2584887 |newspaper=[[Daily News and Analysis]] |accessdate=21 February 2019 |language=en |date=15 February 2018|quote=Interacting with mediapersons on Wednesday, Yasmin, the president of All India Pakhtoon Jirga-e-Hind, said that there were 32 lakh Phastoons in the country who were living and working in India but were yet to get citizenship.}}</ref>
 | region4 = {{flagcountry|UAE}}
 | pop4 = 338,315 (2009)
 | ref4 = <ref name="Pashto in UAE">{{cite web |url=http://www.britannica.com/new-multimedia/pdf/wordat207.pdf|title=United Arab Emirates: Demography|publisher=[[Encyclopædia Britannica]] Online|work=Encyclopædia Britannica World Data|accessdate=15 March 2008}}</ref>
