*Empty MediaWiki Message*

--- a/Siarkowiec.mw
+++ b/Siarkowiec.mw
@@ -1,5 +1,5 @@
 {{Infobox city }}
-'''Siarkowiec''' {{IPAc-pl|ś|a|r|'|k|o|w|j|e|c}} d [[taddart]] deg asun udbil n [[Gmina Wiskitki]], deg [[Żyrardów County]], [[Województwo n Masovia]], deg agmuḍ alemmas n Pulunya.<ref name="TERYT">{{cite web |url=http://www.stat.gov.pl/broker/access/prefile/listPreFiles.jspa |title=Central Statistical Office (GUS) &ndash; TERYT (National Register of Territorial Land Apportionment Journal) |date=2008-06-01 |language=Polish}}</ref>
+'''Siarkowiec''' {{IPAc-pl|ś|a|r|'|k|o|w|j|e|c}} d [[taddart]] deg asun udbil n [[Gmina Wiskitki]], deg [[Żyrardów County]], [[Województwo n Masovia]], deg agmuḍ alemmas n Pulunya.<ref name="TERYT">{{cite web |url=http://www.stat.gov.pl/broker/access/prefile/listPreFiles.jspa |title=Central Statistical Office (GUS) &ndash; TERYT (National Register of Territorial Land Apportionment Journal) |date=2008-06-01 |language=pl}}</ref>
 
 ==Tiwelhiwin==
 {{reflist}}
