*Empty MediaWiki Message*

--- a/Isusiyen.mw
+++ b/Isusiyen.mw
@@ -1,7 +1,7 @@
 {{Infobox ethnic group
 <!-- [[WP:NOETHNICGALLERIES]] -->
 |group=Icelḥiyen, Isusiyen
-|population=~5.1 imelyan<ref name="Comm">{{cite web|last1=Haut commissariat au Plan, Moroccan Kingdom|first1=Haut commissariat au Plan|title=Recensement général de la Maroc|url=http://rgphentableaux.hcp.ma/Default1/|website=HCP|publisher=Haut commissariat du Plan|accessdate=16 August 2016|language=French}}</ref> (14.2% n lmerruk)
+|population=~5.1 imelyan<ref name="Comm">{{cite web|last1=Haut commissariat au Plan, Moroccan Kingdom|first1=Haut commissariat au Plan|title=Recensement général de la Maroc|url=http://rgphentableaux.hcp.ma/Default1/|website=HCP|publisher=Haut commissariat du Plan|accessdate=16 August 2016|language=fr}}</ref> (14.2% n lmerruk)
 |popplace={{flagcountry|Morocco}}-[[Idurar n waṭlas]], [[Sus]]
 |langs=[[Tacelḥit]]
 |rels=Amur ameqqren d [[Islam|Inselmen]] 
