*Empty MediaWiki Message*

--- a/Ikurdiyen.mw
+++ b/Ikurdiyen.mw
@@ -45,7 +45,7 @@
 | ref17 = <ref>{{cite web |title= Switzerland |url= http://www.ethnologue.com/country/CH |work= Ethnologue |accessdate= 14 January 2015}}</ref>
 | region18 = {{flagcountry| Denmark}}
 | pop18 = 30,000
-| ref18 = <ref>{{cite news |title= Fakta: Kurdere i Danmark |url= http://jyllands-posten.dk/indland/ECE5105449/fakta-kurdere-i-danmark/ |accessdate= 24 December 2013 |newspaper= Jyllandsposten |date= 8 May 2006 |language= Danish}}</ref>
+| ref18 = <ref>{{cite news |title= Fakta: Kurdere i Danmark |url= http://jyllands-posten.dk/indland/ECE5105449/fakta-kurdere-i-danmark/ |accessdate= 24 December 2013 |newspaper= Jyllandsposten |date= 8 May 2006 |language= da}}</ref>
 | region19 = {{flagcountry| Jordan}}
 | pop19 = 30,000
 | ref19 = <ref>{{cite web |title= Language and Cultural Shift Among the Kurds of Jordan |url= http://www.linguistics.fi/julkaisut/SKY2010/Al-Khatib_Al-Ali_netti.pdf |accessdate= 10 November 2012 |first1= Mahmoud A.|last1= Al-Khatib |first2= Mohammed N.|last2= Al-Ali |page= 12}}</ref>
@@ -79,7 +79,7 @@
 | ref28 = <ref>{{cite book |title= Statistical Yearbook of Azerbaijan 2014 |year= 2015 |page= 80}} Bakı.{{clarify|reason= What is "Bakı"? Author surname? Publisher? Location? Please complete this citation.|date= August 2015}}</ref>
 | region16 = {{flagcountry| Armenia}}
 | pop16 = 37,470
-| ref16 = <ref>{{cite web|title= Information from the 2011 Armenian National Census|url= http://www.armstat.am/file/doc/99478353.pdf|language= Armenian|work= Statistics of Armenia|accessdate= 27 May 2014}}</ref>
+| ref16 = <ref>{{cite web|title= Information from the 2011 Armenian National Census|url= http://www.armstat.am/file/doc/99478353.pdf|language= hy|work= Statistics of Armenia|accessdate= 27 May 2014}}</ref>
 | languages = [[Takurdit]] and [[Zaza–Gorani languages|Zaza–Gorani]] <br><small> ''Minor: [[Turkish language|Turkish]] (in Turkey), [[Persian language|Persian]] (in Iran), [[Arabic]] (in Syria and Iraq), [[Aramaic language|Aramaic]] (in parts of Iraq and Syria)''</small><br />{{smaller|''In their different forms: [[Central Kurdish|Sorani]], [[Northern Kurdish|Kurmanji]], [[Southern Kurdish|Pehlewani]], [[Zaza language|Zaza]], [[Gorani language (Zaza-Gorani)|Gorani]]''}}
 | religions = Amur ameqqran d [[Islam|Inselmen]] <br/> {{small|([[Tasunnit]], [[Taciɛit n 13 n limamat]], [[Taciɛit]])}} <br/> akked amur amecṭuḥ yettekki ɣer [[Yazidism]], [[Yarsanism]], [[Tamaǧusit]], [[Tagnustit]], [[Tudayt]], [[Tamasiḥt]]
 | related = [[Igduden iraniyen]] nniḍen
