*Empty MediaWiki Message*

--- a/Stauffenberg.mw
+++ b/Stauffenberg.mw
@@ -1,5 +1,5 @@
-{{Asefham}}
-{{Aseɛreq|Staufenberg}}
+{{Disambiguation}}
+{{Distinguish|Staufenberg}}
 '''Stauffenberg''' yezmer ad yilli :
 [[Tugna:Schenk von Stauffenberg Siebmacher115 - Schwaben.jpg|thumb|160px|right|[[Blason (héraldique)|Blason]] n tawacult  Schenk von Stauffenberg.]]
 * '''[[Tawacult Stauffenberg|Stauffenberg]]''', tawacult [[ahaggar|tahaggart]] [[taklizt takaṭulit|takaṭulit]] n [[Schwaben]], di tmurt n [[Lalman]], seg timiḍi wis XIII.  
