*Empty MediaWiki Message*

--- a/Lezzayer_(tamanaɣt).mw
+++ b/Lezzayer_(tamanaɣt).mw
@@ -1,4 +1,4 @@
-{{Infobox city|name=Lezzayer}}
+{{Infobox city}}
 
 '''Lezzayer''' d tamdint tamanaɣt n tegduda n Lezzayer, d tamdint i meqqren deg temurt, ssawalen-as daɣ-n imezdaɣ ines Lezzayer tamellalt neɣ L-Behǧa. Tezga-d deg yiri n [[Ilel Agrakal|yilel agrakal]], tamanaɣt n Lezzayer tefka isem-is i yal agezday (tawilayt) n Lezzayer. Tella gar timiṭrubulin timeqqranin deg umenẓaw n [[Tafriqt|Tafrikt]] s 2 030 000 imezdaɣ deg useggas n [[2002]], yettwaḥsab azal n 2.947.446 n yimezdaɣ deg useggas n [[2008]].
 Di tamdint n Lezzayer kan ad d-naf azal n 4 250 000 n yimezdaɣ neɣ azal n 12% n ugdud azzayri. Di yal tamurt
