--- a/Ixses.mw
+++ b/Ixses.mw
@@ -2,6 +2,12 @@
 {{Datastub}}
 
 == Tilmas ==
+Gar-asen:<ref name=grin>[http://www.ars-grin.gov/cgi-bin/npgs/html/splist.pl?11248 ''Smyrnium''.] Germplasm Resources Information Network (GRIN).</ref>
+*''[[Smyrnium cordifolium]]''
+* ''[[Smyrnium dodonaei]]'' <small>Spreng.</small>
+*''[[Smyrnium creticum]]''
+*''[[Smyrnium olusatrum]]'' - alexanders, black-lovage, horse-parsley
+*''[[Smyrnium perfoliatum]]'' - perfoliate alexanders
 
 == Tiwlafin ==
 [[Tugna:Ixses IMG 8001 1 Smyrnium olusatrum.jpg|thumb|]]
