*Empty MediaWiki Message*

--- a/Honcu.mw
+++ b/Honcu.mw
@@ -1,4 +1,4 @@
-[[Tugna:Japan_honshu_map.svg|thumb|right|260px|Tigzirt n Honcu]]
+{{Databox}}
 '''Honcu''' (neɣ '''Honshu''') d tigzirt tameqqrant n tmurt n [[Japon]]. Deks Timdinin timeqqranin am [[Tokyo]] (tamanaɣt n tmurt), [[Hiroshima]], [[Kawasaki]], [[Kobe]], [[Kyoto]], [[Nagoya]], [[Nara]], [[Osaka]], [[Sendai]], [[Yokohama]] atg.
 
 [[Taggayt:Japon]]
