*Empty MediaWiki Message*

--- a/MySQL.mw
+++ b/MySQL.mw
@@ -1,3 +1,4 @@
+{{Databox}}
 MySQL d yiwen unagraw n usefrek n taffa n yisefka tamasɣant.
 
 S unagraw-a, nezmer ad nekles isefka n yiwen wahil sdaxel yiwet taffa. Deg taffa n yisefka, llant tifelwa anda ara yilin yisefka. Deg yiwet tfelwit llan yisefka yedduklen, amedya tafelwit “Udem” tezmer ad tesɛu isefka “Isem”, “Azemz n tlalit”, “Tansa”, atg.
