*Empty MediaWiki Message*

--- a/Farid_Dms_Debbaḥ.mw
+++ b/Farid_Dms_Debbaḥ.mw
@@ -1,5 +1,4 @@
-{{Infobox biography}}
-
+{{Databox}}
 '''Farid Dms Debah''', Ilul-d 19 di yulyu 1976 di [[Paris]] ([[Fransa]]), d Asegbar, d Amseḍru, Yettaru Isura, d Anfaras n Usarug azzayri d [[Tafrensist|tfransist]] Yettwassen d amseknaw u daɣen d asertay.
 
 == Tudert ==
