*Empty MediaWiki Message*

--- a/Farid_Dms_Debbaḥ.mw
+++ b/Farid_Dms_Debbaḥ.mw
@@ -1,8 +1,8 @@
 {{Databox}}
-'''Farid Dms Debah''', Ilul-d 19 di yulyu 1976 di [[Paris]] ([[Fransa]]), d Asegbar, d Amseḍru, Yettaru Isura, d Anfaras n Usarug azzayri d [[Tafrensist|tfransist]] Yettwassen d amseknaw u daɣen d asertay.
+'''Farid Dms Debbaḥ''', Ilul-d 19 di yulyu 1976 di [[Paris]] ([[Fransa]]), d Asegbar, d Amseḍru, Yettaru Isura, d Anfaras n Usarug azzayri d [[Tafrensist|tfransist]] Yettwassen d amseknaw u daɣen d asertay.
 
 == Tudert ==
-Farid Dms Debah ilul deg useggas n1976 di [[Paris]] ([[Fransa]]). Iɛac tazwara temẓi ines di l zzayer anda iwalef amḍal amizli dɣa mi yessaweḍ 14 n iseggassen yessufeɣ-d akke gma-s Yassine d weltma-s tamuqrant Hadia 45 nnubat.
+Farid Dms Debbaḥ ilul deg useggas n1976 di [[Paris]] ([[Fransa]]). Iɛac tazwara temẓi ines di l zzayer anda iwalef amḍal amizli dɣa mi yessaweḍ 14 n iseggassen yessufeɣ-d akke gma-s Yassine d weltma-s tamuqrant Hadia 45 nnubat.
 
 Iness amenzuMi yuɣal ar Paris, di lɛamr-is 16 iseggassen yeldi takubanit tamenzut- ines di tasenselkimt. D awnaf ,d anaɛmer di tviɛa-s , yeǧǧa tasenselkimt yuɣal d anfaras di lɛemr-s 18 iseggassen yakwed d amekfadu di tasgilt n umattaf. Arnou ɣer warmud agi, yiwi-d turagt n uɣemmas n uhanay ,di Paris d wayen id-as d yezzin aṭas n tmaɣriwin n uamaḍal amizli.
 
