*Empty MediaWiki Message*

--- a/9_fuṛaṛ.mw
+++ b/9_fuṛaṛ.mw
@@ -1,5 +1,5 @@
 {{fuṛaṛ}}
-Ass n 9 fuṛaṛ d ass {{exp|wis}}40 n useggas. Llan 325 wussan deffir-s ar taggara n useggas, {{exp|wis}}326 deg iseggasen ''bisekstil''.
+Ass n 9 fuṛaṛ d ass wis 40 n useggas. Llan 325 wussan deffir-s ar taggara n useggas, wis 326 deg iseggasen ''bisekstil''.
 <center>[[8 fuṛaṛ]] - ''9 fuṛaṛ'' - [[10 fuṛaṛ]]</center>
 
 == Imagraden iqqenen ==
@@ -7,7 +7,7 @@ Ass n 9 fuṛaṛ d ass {{exp|wis}}40 n useggas. Llan 325 wussan deffir-s ar tag
 |commons=Category:9 february
 |commons azwel=9 fuṛaṛ
 }}
-{{Ass asental}}
+
 {{Agni Izemzan}}
 
 
