--- a/Mẓab.mw
+++ b/Mẓab.mw
@@ -1,2 +1,2 @@
 {{Databox}}
-'''Mẓab''' d tamnaḍt deg talemmast n tmurt n [[Lezzayer]], tebɛed seg tamanaɣt-is s wazal n 600 km. Zedɣen-tt agdud n [[imẓabiyen]] (360,000 n imdanen).
+'''Mẓab''' d tamnaḍt deg talemmast n tmurt n [[Lezzayer]], tebɛed seg tamanaɣt-is s wazal n 600 km. izeddeɣ-itt agdud n [[imẓabiyen]] (360,000 n imdanen).
