--- a/Tutlayt_tarusit.mw
+++ b/Tutlayt_tarusit.mw
@@ -1,2 +1,4 @@
 {{Databox}}
 '''Tarusit''' d tutlayt [[tutlayin tislaviyin ticerqiyin|taslavit tacerqit]], nettat tunṣibt deg 4 n tmura: [[Rrus]], [[Belarus]], [[Kazakhstan]] akked [[Kyrgyzstan]]. Ttmeslayen-tt 150 imelyan n imdanen.
+
+[[Category:tutlayt]]
