Ssefsu tasiwelt 91555 sɣur [[Special:Contributions/85.148.67.160|85.148.67.160]] ([[User talk:85.148.67.160|Meslay]])

--- a/Tasengama.mw
+++ b/Tasengama.mw
@@ -1,6 +1,6 @@
 [[Tugna:CollageFisica.jpg|thumb|250px]]
 
-'''Tasengama''' neɣ '''Tagamassna''' (Es [[Tagrikt|Tegrigt]]: φυσική) (Es [[Taqbaylit|Teqbaylit]] d-awal uddis: ''Tussna + Agama'' neɣ '''Tussna en ugama''') d-[[tussna]] yeɣɣaren timidranin tigejdanin am [[tafasa|tfasa]] ed [[tadusi|tdusi]] ed [[akud|wakud]] ed wayen yakk ay dd-yettasen deg-sent am [[Takura|tkura]] en [[tanga takrurant|tenga]] ed umussu ines. Es umata tasengama d-tasledt tamatant en [[agama|ugama]] ed [[tallunt]] ed tarrayt en umahil nsent.
+'''Tasengama''' (S [[Tagrikt|Tegrikt]]: φυσική) (S [[Taqbaylit|Teqbaylit]] d awal uddis: ''Tusna + Agama'' neɣ '''Tusna n ugama''') d [[tusna]] yeɣɣaren timidranin tigejdanin am [[tafasa|tfasa]] d [[tadusi|tdusi]] d [[akud|wakud]] d wayen yakk id yettasen deg-sent am [[Takura|tkura]] n [[tanga takrurant|tenga]] d umussu-ynes, S umata tasengama d tasledt tamatant n [[agama|ugama]] d [[tallunt]] d tarrayt n umahil nsent
 
 == Amezruy ==
 
