*Empty MediaWiki Message*

--- a/Uruppa_talemmast.mw
+++ b/Uruppa_talemmast.mw
@@ -1,6 +1,6 @@
 [[Tugna:Central Europe (Brockhaus).svg|thumb|260px|Timura id yettgin Uruppa talemmast s yini azeggaɣ]]
 
-'''Uruppa talemmast''' d tamnadṭ id yezgan gar n umur [[Uruppa tutrimt|utrim]] d umur [[Uruppa tagmudant|agmuḍan]] n [[Turuft|Uruppa]], irem n Uruppa talemmast yeggumi ɣef [[tamagit tadelsant|tmagit tadelsant]] d tmazrayt yezdin gar n [[aɣref|iɣerfan-is]]
+'''Uruppa talemmast''' d tamnaḍt id yezgan gar n umur [[Uruppa tutrimt|utrim]] d umur [[Uruppa tagmudant|agmuḍan]] n [[Turuft|Uruppa]], irem n Uruppa talemmast yeggumi ɣef [[tamagit tadelsant|tmagit tadelsant]] d tmazrayt yezdin gar n [[aɣref|iɣerfan-is]]
 
 == Timura ==
 Timura n Uruppa talemmast gan-t d: 
