--- a/Lkaf_(Tunes).mw
+++ b/Lkaf_(Tunes).mw
@@ -3,7 +3,7 @@
 
 ==Asideg==
 
-Lkaf tezga-d ar 175 ikilumetren seg temdint n Tunes Tamanaɣt yerna ur teggug ara seg tilisa akid [[Ledzayer]] ed tmurt [[Icawiyen]] i yellan kan ar 40km. Deg useggwas n 2004, ɣur-es azal n 45,191 imezdaɣen. Tamnadṭ ed temdint llant deg wakal n At Drid, yiwet teqbilt tamaziɣt n Tunes. 
+Lkaf tezga-d ar 175 ikilumetren seg temdint n Tunes Tamanaɣt yerna ur teggug ara seg tilisa akid [[Ledzayer]] ed tmurt [[Icawiyen]] i yellan kan ar 40km. Deg useggwas n 2004, ɣur-es azal n 45,191 imezdaɣen. Tamnaḍt d temdint llant deg wakal n At Drid, yiwet teqbilt tamaziɣt n Tunes. 
 
 Yerna, amɛellem n Lkaf isem-is Sidi Bu Mexluf, yesɛa taqubatt deg temdint. 
 
