*Empty MediaWiki Message*

--- a/Tutlayt_taqbaylit.mw
+++ b/Tutlayt_taqbaylit.mw
@@ -25,7 +25,7 @@
 Adlis amenzu id yeffɣen s Teqbaylit d win yura [[Adolphe Hanoteau]] ɣef tuɣac n [[Ǧerǧer|Ǧerğer]] deg useggas n 1867,  deffir-s d [[Auguste Mouliéras]]  yuran sin n [[adlis|yidlisen]] ɣef [[tamacahut|tmucuha]] n Tmurt n Iqbayeliyen gar N [[aseggas|iseggasen]] n 1891, 1893 d 1895), akk d [[Ɛmer u Saɛid Bulifa|Bulifa]] i yuran adlis ɣef yisefra n [[Si Muḥend u Mḥend|Si Muḥend]] deg useggas n 1904. Imaren, uran [[Ifransiwen]] kra n yidlisen ɣef tmucuha d yisefra n Yiqbayliyen. [[Ungal]] amenzu ittwarun s Teqbaylit d win yura [[Belɛid At Ɛli]] deg yiseggasen 1940. Adlis i s-yefkan ilugan iressan n tjerrumt i Teqbaylit d win yura Dda [[Mulud Mɛemmri|Mulud n At Mɛemmeṛ]]. [[Kamal U Zerrad]] netta yerna-d ɣef umahil n Dda Lmulud i wakken ad d-iressi ugar ilugan n tjerrumt n tutlayt-ayi. 
 Iseggasen-a ineggura ffɣen-d azal n 400 idlisen s Tmaziɣt, gar ammuden n isefra, tullisin akk d ungalen. 
 
-Taqbaylit ass mi id kecmen ifransiwen ar tmura n [[Tafrikt n Ugafa|Tefriqt n Ugafa]] tella tettwameslay deg yiwet n temnaṭ meqqren azal n snat n tikkwal tamnaṭ n leqbayel n wass-a. Seg tudrin i d-yezzin i [[Mila]], terreḍ ar tid n yidurar n [[Lḥuḍna]], idurar n [[Ṣṭif]], idurar n [[Jijel]], [[Msila]] d uzray ar [[tmurt n leqbayel]] n wass-a, [[At Wartilan]], [[At Yaɛla]], akk d iderma n temnaṭ n [[Bgayet]], n [[Tubiret]] akk d wid n [[Tizi Wezzu]] d [[Bumerdas]].
+Taqbaylit ass mi id kecmen ifransiwen ar tmura n [[Tafrikt n Ugafa|Tefriqt n Ugafa]] tella tettwameslay deg yiwet n temnaṭ meqqren azal n snat n tikkwal tamnaḍt n leqbayel n wass-a. Seg tudrin i d-yezzin i [[Mila]], terreḍ ar tid n yidurar n [[Lḥuḍna]], idurar n [[Ṣṭif]], idurar n [[Jijel]], [[Msila]] d uzray ar [[tmurt n leqbayel]] n wass-a, [[At Wartilan]], [[At Yaɛla]], akk d iderma n temnaṭ n [[Bgayet]], n [[Tubiret]] akk d wid n [[Tizi Wezzu]] d [[Bumerdas]].
 [[File:Aires linguistiques du nord-est algérien.svg|thumb|Asideg n Teqbaylit  [[Tacawit|Tcawit]] deg ugafa-agmuḍan n [[Ledzayer]]]] 
 
 Imir ifransiwen tekkan ɣef lquyyad akk d Bacaɣat akken ad qehren agdud. Kksen akal i wid yellan zedɣen anda yella wakal yelhan i tyerza, kra snegren-t, kra snejlan-t. Fkan akal-nni i Lquyyad. Lquyyad-agi akk d Bacaɣat d wid yeɣran [[Tutlayt taɛrabt|taɛrabt]], ifransiwen llan lemmden [[taɛrabt]] akken ad ttemyarun d lquyyad-a, imezdaɣ yeqqimen d aklan deg tmurt nsen yeqqim-asen-d kan ad d-ḍefren almi i d-ufan iman nsen ttun tutlayt nsen, akken i sen-iruh wakal nsen, ǧǧan iman nsen tuɣ fell-asen taɛrabt am akken werǧin mmeslayen taqbaylit. Ihi akka i teqqurmeḍ tjumma anda tettwameslay teqbaylit ass-a.
