*Empty MediaWiki Message*

--- a/Smaɛil_Bellac.mw
+++ b/Smaɛil_Bellac.mw
@@ -1,6 +1,6 @@
 '''Smaɛil BELLAC''', s [[Tifinaɣ|tfinaɣ]] ⵙⵎⴰⵄⵉⵍ  ⴱⴻⵍⵍⴰⵛ, ilul deg useggas n 1946, yemmut deg 2015. Smaɛil BELLAC d aɣewlis, seg zik i yebda yettmal ɣer [[tmaziɣt]]; yettaru-tt s tfinaɣ. Yura yis-s aṭas n yidrisen, wa ines, wa isuɣel-it-id seg tutlayt niḍen.<br />
 
-Ger wayen yura, asefru n « ugerfiw d ubareɣ », i yellan d asuɣel n tneqqist « Agerfiw d Ubareɣ » n [[Jean de la Fentaine]]; iger-it-id [[Muḥya]] deg tmezgunt i wumi isemma «'''Sinistri'''».
+Ger wayen yura, asefru n « ugerfiw d ubareɣ », i yellan d asuɣel n tneqqist « Agerfiw d Ubareɣ » n [[Jean de La Fontaine]]; iger-it-id [[Muḥya]] deg tmezgunt i wumi isemma «'''Sinistri'''».
 
 ==Taɣbalut==
 Adlis n tmaziɣt n useggas wis 3 n ulmud alemmas n tmurt n Lezzayer (sb 75)
