*Empty MediaWiki Message*

--- a/Lmulud_Zeddak.mw
+++ b/Lmulud_Zeddak.mw
@@ -1,315 +1,21 @@
+{{Databox}}
 '''ZEDDAK Lmulud''' (fr: mouloud Zedek)
 
-Yevda tira n isefra-s d amẓyan,deg useggas wis ssin n uɣervaz amenzu (2ème AM), di leɛmer-is 12 neɣ 13 n iseggasen.
-Ma d ayen yeɛnan lmuziga yeqqim ḥalami d aseggas deg iṛuḥ ad d-yesɛeddi lɛeskar i yevda yesnulfu-y-d tuɣac. Warǧin yelmid lmuziga deg uɣervaz, maca am akken it-id-yenna ulac aɣervaz yifen Ath Xelfun, labaɛda amekkan wumi qaren Tala n Berzal akked Tiɣilit n umadaɣ. Tamedyazt akked Lmuziga d ayen is-izedɣen ul. Tizlitt m'ara d-t-as tettas-d akken tekmel, iteddu-d deg-s usefru akked lmuziga, ma teqqim-as deg wallaɣ lmeɛna-s d tizlit yelhan, ma yettu-tt hatan ihi fiḥel-itt...  
+Yebda tira n isefra-s d amẓyan,deg useggas wis ssin n uɣerbaz amenzu (2ème AM), di leɛmer-is 12 neɣ 13 n iseggasen.
+Ma d ayen yeɛnan lmuziga yeqqim ḥalami d aseggas deg iṛuḥ ad d-yesɛeddi lɛeskar i yebda yesnulfu-y-d tuɣac. Warǧin yelmid lmuziga deg uɣerbaz, maca am akken it-id-yenna ulac aɣerbaz yifen Ath Xelfun, labaɛda amekkan wumi qaren Tala n Berzal akked Tiɣilit n umadaɣ. Tamedyazt akked Lmuziga d ayen is-izedɣen ul. Tizlitt m'ara d-t-as tettas-d akken tekmel, iteddu-d deg-s usefru akked lmuziga, ma teqqim-as deg wallaɣ lmeɛna-s d tizlit yelhan, ma yettu-tt hatan ihi fiḥel-itt...  
 
-Ccix Lḥesnawi, Sliman ƐAZEM, TALEV Ravaḥ akked Ḥnifa d wid swayes yenǧer avrid-is Lmulud. Ass mi yuɣal ula d netta s timmad-is d anaẓur, iḥemmel ad yessl i tezlatin n AT Megellat, Lwennas Maɛtub,Yidir akked waṭṭas nniḍen.
+Ccix Lḥesnawi, Sliman ƐAZEM, TALEb Rabaḥ akked Ḥnifa d wid swayes yenǧer abrid-is Lmulud. Ass mi yuɣal ula d netta s timmad-is d anaẓur, iḥemmel ad yessl i tezlatin n AT Megellat, Lwennas Maɛtub,Yidir akked waṭṭas nniḍen.
 
-Yessekles takasiṭ-is tamenzut ass mi yesɛa 23 iseggasen, swaswa kan mi d-ifuk lɛeskaṛ. S tkaṣiṭ-agi dɣa is-d-ivan uvrid ara yawi, avrid n ccna akked umennuɣ aseklan. Asekles-agi amenzu d win is-d-yewwin lxir ar zdat, acku imdebbeṛ n uxxam n usekles iweɛdas 3 iseggasen n leqdic yid-s. 
+Yessekles takasiṭ-is tamenzut ass mi yesɛa 23 iseggasen, swaswa kan mi d-ifuk lɛeskaṛ. S tkaṣiṭ-agi dɣa is-d-iban ubrid ara yawi, abrid n ccna akked umennuɣ aseklan. Asekles-agi amenzu d win is-d-yewwin lxir ar zdat, acku imdebbeṛ n uxxam n usekles iweɛdas 3 iseggasen n leqdic yid-s. 
 
-Xas akken avrid n unaẓur yessawen maca laɛtav warǧin it-id-yudder, yezga yevɣa ad iɛaned imuqranen, yezga yettmuqul ɣer Lewnis At Mengellat yellan d anaẓur is-iceɛlen tafat. Llan daɣen wiyaḍ d wid is-yellan d tigeja wuɣur isenned seg wass-mi yevda, uɣalen maḍi d imdukal-is, am Maɛtub Lwennas akked Crif ḤAMANI is-yefkan aṭṭas n ufus n tallelt. Lmulud, yal tikelt yettara-y-asen tajmilt.
+Xas akken abrid n unaẓur yessawen maca laɛtab warǧin it-id-yudder, yezga yebɣa ad iɛaned imuqranen, yezga yettmuqul ɣer Lewnis At Mengellat yellan d anaẓur is-iceɛlen tafat. Llan daɣen wiyaḍ d wid is-yellan d tigeja wuɣur isenned seg wass-mi yebda, uɣalen maḍi d imdukal-is, am Maɛtub Lwennas akked Crif ḤAMANI is-yefkan aṭṭas n ufus n tallelt. Lmulud, yal tikelt yettara-y-asen tajmilt.
 
-Lmulud d win wumi tezdeɣ teqvaylit deg ul, adrar n ǧerǧer d win swayes yezga yettzux,ulac lɛerc yeǧǧa, tameɣra tettak-it i tayeḍ, amundul ddaw teɣruḍt yekka-d meṛṛa tudrin n tmurt, ulac taddart ur yessefreḥ ara s tezlatin-is, si Tizi ar Lezzyer, si Tuvirett ar Vgayet. Yecna ula di Wehran anda yewhem dɣa ɣef tzeqqa yeccuṛen ḥalami d ulamek...Wamag tura ulayɣer d nevder tiseddawinyin, yal mi s-d-sawelent netta ad asent-yerr tiɣri...
+Lmulud d win wumi tezdeɣ teqbaylit deg ul, adrar n ǧerǧer d win swayes yezga yettzux,ulac lɛerc yeǧǧa, tameɣra tettak-it i tayeḍ, amundul ddaw teɣruḍt yekka-d meṛṛa tudrin n tmurt, ulac taddart ur yessefreḥ ara s tezlatin-is, si Tizi ar Lezzyer, si Tubirett ar bgayet. Yecna ula di Wehran anda yewhem dɣa ɣef tzeqqa yeccuṛen ḥalami d ulamek...Wamag tura ulayɣer d nebder tiseddawinyin, yal mi s-d-sawelent netta ad asent-yerr tiɣri...
 
-Yiwet n tikelt dɣa di Tizi-uzzu, deg yiwet n tejmilt is-yuɣalen i ḤNIFA, Lmulud yezdi aṭṭas n tmusniwin akked inaẓuren it-yecvan. Yeḥka-d, s tujma akked ucmumeḥ, dakken tanaẓurt NEWWARA tenna-y-as belli tikelt tamezut ass-mi it-twala, tenwa meqqar di laɛmaṛ "Beaucoup plus vieux", acku cvaḥa n tezlatin-is akked telqey n tmedyazt-is amzun tekka-d seg iles n umɣar azemni. Deg useggas n 1990 daɣen yecfa-d Lmulud ɣef tmeɣra yexdem deg uxxam n tnelmadin di MDUḤA netta akked umdakkel-is M.FELLAG yesnecraḥen taswiɛt...
+Yiwet n tikelt dɣa di Tizi-uzzu, deg yiwet n tejmilt is-yuɣalen i ḤNIFA, Lmulud yezdi aṭṭas n tmusniwin akked inaẓuren it-yecban. Yeḥka-d, s tujma akked ucmumeḥ, dakken tanaẓurt NEWWARA tenna-y-as belli tikelt tamezut ass-mi it-twala, tenwa meqqar di laɛmaṛ "Beaucoup plus bieux", acku cbaḥa n tezlatin-is akked telqey n tmedyazt-is amzun tekka-d seg iles n umɣar azemni. Deg useggas n 1990 daɣen yecfa-d Lmulud ɣef tmeɣra yexdem deg uxxam n tnelmadin di MDUḤA netta akked umdakkel-is M.FELLAG yesnecraḥen taswiɛt...
 
-Yella daɣen Yusef ABEǦAWI i iwalan di Lmulud anaẓur izemren ad iruḥ ɣer levɛid ass-mi yevda.
-Ass-agi Zeddak Lmulud d isem yessen umeqran d umeẓyan, isefra-s d wid lqayen. Lmulud d win ijerden avrid-is yerna warǧin is-yexḍa.
+Yella daɣen Yusef ABEǦAWI i iwalan di Lmulud anaẓur izemren ad iruḥ ɣer lebɛid ass-mi yebda.
+Ass-agi Zeddak Lmulud d isem yessen umeqran d umeẓyan, isefra-s d wid lqayen. Lmulud d win ijerden abrid-is yerna warǧin is-yexḍa.
 
-TIDAK"
-
-A tidak id- yettasen/
-Ur inuda ḥed fell-asent/
-A tid alkw deg nkeččem/ 
-Amek almi nger daxel nsent?/
-Ma d nukni itent-id yettafen?/
-Ma nutenti, amek iɣ-d-ttafent?/
-A widak yesseḥsaben/
-Yexḍa i leḥsab wid ḥesbent./
-
-Madi fellaɣ tesseɣleb?/
-Tamara ur s nezmir ara/
-Ma yella fellaɣ tesseɣleb/
-Wissen ma yella ur s nezmir ara?/
-Sekra win ɣer  nqerreb/
-Nufat yebɛed mi nuẓa/
-Ixef-is wina ɣef i nqelleɣ/
-Yessen anida it-iɣebba/
-Ittvan-ed umergu n cḍeɣ/
-Ma yeɣli lfers i tṣeḍwa/
-
-Anwa mači d axṣim-iw/
-Anwa wa’ur neǧǧi tama/
-Anwa mači d axṣim-iw/
-Ala win yeǧǧan tama!/
-Wwiɣ avrid s yimi-w/
-Ktaleɣ avrid s wayla/
-Ma tɣileḍ ɛǧeb-ɣ iman-iw/
-M’ur d ak-teɛǧib liḥala/
-Tagust teṛsa deg ucḍaḍ-iw/
-Iqqers iɣidi ay aggaw/
-Ma tɣileḍ ɛǧeb-ɣ iman-iw/
-M’ur d ak-teɛǧib liḥala/
-Ma tezgiḍ deg ijufar-iw/
-I briɣ  iybidi ay aggaw/
-
-Mači d keč id iy-irḥan/
-Ay awal mi d ak selleɣ/
-Awal winn’akken it yennan/
-Ma yeẓra s anda yeffeɣ ?/
-Mači d netta id iy-icqan/
-Ur yiɣaḍ ma yides ferqeɣ/
-Ay Awal id iy-inɣan,/
-Mi d-kiḍ seg win ḥemleɣ/
-
-Ma ṭseɣ d urrif duɣilif/
-Tanekra-innu di ndama/
-Talemast tugi-k a rrif/
-Rrif ur yezmir ara/
-A win yettnadin nnif/
-Kulci yella, ma d win yekfa/
-A win ur nezmir i lḥif/
-Kullec ulac, ma d win yella/
-
-Ay imezgan wid ur neggan/
-S wannuz itt-ɛeddin ɣurwen/
-Ma Teẓram tidak yellan,/
-Teẓram tin id aɣ-yuɣen/
-
-Ma itbiren d iseflan/
-Ad zzin igerfiwen/
-Tegrad nnuba i yesɣan/
-Teẓram lbaz amek akken/
-
-Ma itbiren d iseflan/
-Ad zzin igerfiwen/
-Ma twala-m rebḥen yesɣan/
-Walit lbaz it yuɣen!/
-
-                M.ZEDEK
-
- 
-
- 
-
- 
-
-
- 
-
- 
-
- 
-
-"TAKTUNYA"
-
-Am tektunya di yersi-k/
-Mači  d ayen id-yetteksen/
-Ɣer deffir iḥevsitt yiles-ik/
-Ɣer zdat tugi ad tqeddem/
-
-Ma yessusfik-id wakal-ik/
-Neqḍen seg-s amur-ik/
-Ma ulac lehna di tmrut-ik/
-Ur tt-ttnadi anda nniḍen!/
-M’ur tukiḍ d yiman-ik/
-Sers deg ubrid taɛkemt-ik/
-Ḍeqer-as tamrart i yiri-k/
-Neɣ tarṣast ɣer ger wallen/
-
-Tḍul almi truḥ teɣrivt-ik/
-Wid wumi truḥ ma d-uɣalen?/
-Tufiḍ levɣi-k di lɣerḍ-ik/
-Ur d-tezggiḍ seg wid iḥaren/
-
-M’ur d ak temli tezmart-ik/
-Ɣef ussan ik-d-iḥersen/
-Ziɣ dagi la-d yegri yixef-ik/
-Ma yegwra uqezzeb i lɛemr-ik/
-La tessewḥac tudert-ik/
-Id-yegwran anda nniḍen/
-
-
-Keč ur yessakwi wass-ik/
-Ur tesgan tmeddit-ik/
-Rnu-y-as crab i lḥif-ik/
-Teglilezḍ deg ikartunen!/
-
-Tuɣal d amengar tikli-k/
-Ɛyan alkw deg-k yeḥbiben/
-Anda’kken zint wallen-ik/
-Ugin ak-id-muqlen/
-Hatan lḥiḍ d unyir-ik!/
-Sigwt-as i tgwenza iɛeksen!/
-Neɣ ttektili deg ubri-ik!/
-Ttawi ttara, aqjun yif-ik!/
-Ḥala keč d yiman-ik,/
-D yiwen la yezmen yiwen./
-
-Ttawi snitra ger ifassen-ik!/
-W’ara teɛǧeb teqbaylit-ik?/
-Leqbayel assa mači am zik/
-Assa  Aqbayli  d idrimen/
-
-Wissen amek is-yega wul-ik,/
-I tmarhunt ittganayen?/
-Ma mazal deg-s tayri-k/
-Neɣ d neyya i yenquqlen?/
-Tesḥeṣleḍ deg-s arraw-ik,/
-Ma yettu iɣuṛ-ed win yurwen?/
-Ur teṭif-eḍ degw’ awal-ik/
-Ayen alkw yehdeṛ yimi-k/
-D temẓi-s i tjeggeḥ tumen-ik/
-Yeḍḥ-ad d aɣebwaṛ s allen./
-
-Ma yuɣal d abrid wexxam-ik/
-Tabburt yellin, d afus-ik!/
-Ma ibedre-d ḥed di nnif-ik/
-D kečini ig-xnunsen!/
-
-Am tektunya di yersi-k/
-Mači  d ayen id-yetteksen/
-Ɣer deffir yugi yiles-ik/
-Ɣer zdat tugi ad tqeddem/
-
-Ma yessusfik-id wakal-ik/
-Neqḍen seg-s amur-ik/
-Ma ulac lehna di tmrut-ik/
-Ur tt-ttnadi anda nniḍen!/
-M’ur tukiḍ d yiman-ik/
-Sers deg uvrid taɛkemt-ik/
-Ḍeqer-as tamrart i yiri-k/
-Neɣ tarṣast ɣer ger wallen/
-
-                        M.ZEDEK
-
-                                    
-
- 
-
-"LIHALA N TMURT"
-
-  
-
-Azɣal aḍu n seḥra/              
-Lɣeṭ asigna/
-Aɣebbar ɣaf tidi iɣurres/
-
-Am akken innul-ed lqaɛa/
-Seg wakken yerɣa/
-Andat yiṭij a times/
-
-Warẓigen iqaɛd-as i cna/
-Aken its yebɣa/
-Ugadeɣ ad cbuɣ ɣures/
-A yemma-innu/
-
-Ula yiwen ur di yirǧa/
-Ulamek it neǧa/
-Yeẓra webrid at nelḥu/
-A yemma-innu/
-
-
-Ay iculiḍen ittafgen/
-Am igarfiwen/
-Yal ma’r as-yehwu i waḍu/
-
-A tursaḍ d wafrasen/
-D-iččan ixxamen/
-Tuɣal tmurt d agudu/
-
-La ttfeggiḍen izuliɣen/
-Sal  and’ar awḍen/
-Sya w sya la d-ttfuḥu/
-A yemma-innu/
-
-Ma’kkagi id irvayliyen /
-Yeqqaren nessen/
-Inas i gma d aɣurru/
-A yemma-innu/
-
-Lqahwa igirru lǧarnan/
-Lkas n waman/
-JSK d acu ara texdem?/
-
-Mači d keč i yirzan/
-A kawkaw yezzan/
-D uglan-iw id yi-k-yeksen/
-
-Ɛyiɣ di tavla n duxxan/
-D ubriki yeḥfan/
-Akwed cemma deg iculliḍen/
-A yemma-innu/
-
-Ur cukkeɣ ak-geɣ ay axxam/
-Segwran-k wussan/
-Inas i Lǧuher ay-tettu/
-A yemma-innu/
-
-Degnɣ teggul tsumta/
-Zher d cmata/
-Nek yidem ixarbaɣ wusu/
-
-Yeɣli lmetred iɣusa/
-Dayen sḥa d lehna/
-A tayri n daɛwesu/
-
-Kem rran-am tilisa/
-Nek ulac littaɛ/
-Tugiḍ nek yidem att-nefru/
-A yemma-innu
-
-Isli, tislit, tissulya/
-Ur zmireɣ ara/
-Yifit ur tt-id-nettɣuru/
-A yemma-innu/
-
-Ṛmel deg assif yekfa/
-Ur yeqim uga/
-Wamag ay-aɣarbal-iw/
-
-A lǧin yeḥfan si tarda/
-Inɛel bbu lxedma/
-Lḥif d lḥif a lḥif-iw/
-
-Lemmer s zmireɣ i lbirra/
-Yulin di ssuma/
-Am d-smireɣ aɛebbuḍ-iw/
-A yemma-innu/
-
-Ad ɛeddiɣ ɣer vu ccira/
-Ad-gezmeɣ ɛecra/
-Meqqar ad yinig walleɣ-innu/
-A yemma-innu/
-
-Lemmer s zmireɣ i lbirra/
-Yulin di ssuma/
-Am d-smireɣ aɛebbuḍ-iw/
-A yemma-innu/
-
-Ad ɛeddiɣ ɣer bu ccira/
-Ad-gezmeɣ ɛecra/
-Meqqar ad yinig uqarru/
-A yemma-innu/
-
-Neɣ ad-gwriɣ di tinna/
-M’ur degwri tmenna/
-Syen am d-zuffeɣ abbu/
-A yemma-innu/
-
-Neɣ ad-gwriɣ di tinna/
-M’ur degwri tmenna/
-Asirem ad as-zuffeɣ abbu/
-A yemma-innu/
-
-Neɣ ad-gwriɣ di tinna/
-M’ur degwri tmenna/
-Tamaziɣt as-zuffeɣ abbu/
-A yemma-innu/
-
-                   Zedek Mouloud
-
-
-Read more at http://merzoukouchene.e-monsite.com/s-ur-merzouk-ouchene/imedyazen/zedek-mouloud.html#Zwdl2WuD5Mlr38uK.9
-
-izlatin : Zeddak Lmulud
+==Ẓer daɣen==
+*http://merzoukouchene.e-monsite.com/s-ur-merzouk-ouchene/imedyazen/zedek-mouloud.html#Zwdl2WuD5Mlr38uK.9
