*Empty MediaWiki Message*

--- a/Asalay_Aɣelnaw_n_Taẓuri_Tatrart_d_Tazit.mw
+++ b/Asalay_Aɣelnaw_n_Taẓuri_Tatrart_d_Tazit.mw
@@ -1,3 +1,4 @@
+{{Databox}}
 Yelli-d Asalay-agi tiwwura-nes i wegdud g waggur n dujember 2007, tella taẓunẓut-ines sɣur [[Xalida Tumi]] (Mesɛudi) taneɣlaft n takerza, yezga-d g 25 Abrid [[Lɛarbi Benmhidi]] (rue d'Isly) g wasun wis sin n tmanaɣt, yeṭṭef amkan n [[Galerie de France]].
 
 [[Tugna:Asalay n tazuri tatrart.jpg|thumb|300px|right|Udem n Asalay n taẓuri tatrart d tazit wki d'udmis id yezgan ar ubrid n [[Lɛarbi Benmhidi]]]]
