*Empty MediaWiki Message*

--- a/Arezqi_U_Lbacir.mw
+++ b/Arezqi_U_Lbacir.mw
@@ -1,6 +1,7 @@
-D yiwen n urgaz yettnaɣen ɣef tlelli "Bandit d'honneur", deg tama n Ukfadu, Tamgut, Iɛkkuren.
+{{Databox}}
+'''Arezqi U Lbacir''' d yiwen n urgaz yettnaɣen ɣef tlelli "Bandit d'honneur", deg tama n Ukfadu, Tamgut, Iɛkkuren.
 
-Arezqi U Lbacir, illul deg usegwas n 1859 deg tama n Buḥini. 
+Arezqi U Lbacir, ilul deg useggas n 1859 deg tama n Buḥini. 
 
 Baba-s qqaren-as Bacir Aɛli N At Aɛli, mad yemma-s qqaren-as Tasaɛdit Taǧibat. 
 
