*Empty MediaWiki Message*

--- a/Arezqi_U_Lbacir.mw
+++ b/Arezqi_U_Lbacir.mw
@@ -1,8 +1,8 @@
 {{Databox}}
-'''Arezqi U Lbacir''' d yiwen n urgaz yettnaɣen ɣef tlelli "Bandit d'honneur", deg tama n Ukfadu, Tamgut, Iɛkkuren.
+'''Arezqi U Lbacir''' d yiwen n wergaz yettnaɣen ɣef tlelli "Bandit d'honneur", deg tama n Ukeffadu, Tamgut, Iɛekkuren.
 
 Arezqi U Lbacir, ilul deg useggas n 1859 deg tama n Buḥini. 
 
-Baba-s qqaren-as Bacir Aɛli N At Aɛli, mad yemma-s qqaren-as Tasaɛdit Taǧibat. 
+Baba-s qqaren-as Bacir Aɛli N At Aɛli, ma d yemma-s qqaren-as Tasaɛdit Taǧibat. 
 
 [[Category:Tameddurt]]
