--- a/Alger_Républicain.mw
+++ b/Alger_Républicain.mw
@@ -13,4 +13,4 @@ Deg Ctember [[1955]], imi i bedd ɣer yidis n Yezzayriyen i yellan ttnaɣen ɣef
 
 S waya, "Alger Républicain" yella yugar aɣmis n "Le Peuple" (n Terni n Weslelli Aɣelnaw). Deg 1964, imḍebbren n "Alger Républicain" qeblen ad rren aɣmis-nsen d win n [[Terni n Weslelli Aɣelnaw]], sakkin, deg 1965, s deffir ma tella-d tuttya-nni taserdasit i deg [[Hewwari Bumedyen]] yesseɣli [[Ḥmed Ben Bella]], anabaḍ Azzayri yesddukkel iɣmisen n "Alger Républicain" d "[[Le Peuple]]" yerna yerra-ten d yiwen weɣmis umi isemma "El Moudjahid". S deffir n tedyanin n Tuber 1988, "Alger Républicain" yuɣal-d ɣer tuffɣa, maca ɣef ljal n wuguren i d-yemlal, yeḥbes deg 1994. Seg yimir-nni, yuɣal itteffeɣ-d seg-a ɣer da, tikkal yal dduṛt, tikkal yal ayyur, xas akken mazal yesɛa uguren. [[Albert Camus]] d [[Kateb Yasin]] seg wid i d-yuran imagraden deg weɣmis-a.
 
-[[Category:Iɣmisen n Dzayer]]
+[[Category:Iɣmisen n Lezzayer]]
