*Empty MediaWiki Message*

--- a/La_Dépêche_de_Kabylie.mw
+++ b/La_Dépêche_de_Kabylie.mw
@@ -6,4 +6,4 @@
 [http://www.depechedekabylie.com Asmel (adeg) n weɣmis]
 
 
-[[Taggayt:Iɣmisen n Dzayer|Dépêche]]
+[[Taggayt:Iɣmisen n Lezzayer|Dépêche]]
