*Empty MediaWiki Message*

--- a/Horizons.mw
+++ b/Horizons.mw
@@ -1,4 +1,4 @@
 {{Databox}}
 '''Horizons''' d aɣmis ayallas n uwanak (ddula) adzayri ay d-itteffɣen s tefrensist. Anemhal n weɣmis d [[Lɛarbi Timizar]].
 
-[[Category:Iɣmisen n Dzayer]]
+[[Category:Iɣmisen n Lezzayer]]
