*Empty MediaWiki Message*

--- a/Le_Quotidien_d'Oran.mw
+++ b/Le_Quotidien_d'Oran.mw
@@ -1,4 +1,4 @@
 {{Databox}}
 '''Le Quotidien d'Oran''' d aɣmis ayalas (quotidien) imzireg (indépendant) azzayri, yessebded-it-id Muḥemmed Ɛebdu Benɛebbu deg 1994.
 
-[[Category:Iɣmisen n Dzayer]]
+[[Category:Iɣmisen n Lezzayer]]
