*Empty MediaWiki Message*

--- a/El_Moujahid.mw
+++ b/El_Moujahid.mw
@@ -2,4 +2,4 @@
 '''El Moujahid''' d aɣmis adzayri yuran s tefransist. 
 
 
-[[Taggayt:Iɣmisen n Dzayer|Moudjahid]]
+[[Taggayt:Iɣmisen n Lezzayer|Moudjahid]]
