*Empty MediaWiki Message*

--- a/Le_Soir_d'Algérie.mw
+++ b/Le_Soir_d'Algérie.mw
@@ -5,4 +5,4 @@
 [http://www.lesoirdalgerie.com Asmel (adeg) n weɣmis]
 
 
-[[Taggayt:Iɣmisen n Dzayer|Soir d'Algérie]]
+[[Taggayt:Iɣmisen n Lezzayer|Soir d'Algérie]]
