*Empty MediaWiki Message*

--- a/El_Watan.mw
+++ b/El_Watan.mw
@@ -5,4 +5,4 @@
 [http://www.elwatan.com Asmel (adeg) n weɣmis]
 * [http://elwatan.media-toolbar.com El-Watan toolbar]
 
-[[Taggayt:Iɣmisen n Dzayer|Watan]]
+[[Taggayt:Iɣmisen n Lezzayer|Watan]]
