*Empty MediaWiki Message*

--- a/Da_Lat.mw
+++ b/Da_Lat.mw
@@ -1,4 +1,4 @@
-[[Tugna:Pedagogical College of Da Lat 18.jpg|300px|right|thumb|Da Lat]]
-Tamanaɣt n tmurt n [[Tay Nguyen]], [[Vietnam]]. Tettwassen s isem n temdint n tafat.
+{{Databox}}
+'''Da Lat''' d tamanaɣt n tmurt n [[Tay Nguyen]], [[Vietnam]]. Tettwassen s isem n temdint n tafat.
 
 [[Taggayt:Vietnam]]
