*Empty MediaWiki Message*

--- a/Phan_Thiet.mw
+++ b/Phan_Thiet.mw
@@ -1,4 +1,4 @@
-[[Tugna:Phan Thiet river by night.jpg|300px|right|thumb|Phan Thiet]]
-Tamanaɣt n tmurt n Phan Thiet, [[Vietnam]]. Tettwassen s isem n temdint n tafat.
+{{Databox}}
+'''Phan Thiet''' d tamanaɣt n tmurt n Phan Thiet, [[Vietnam]]. Tettwassen s isem n temdint n tafat.
 
 [[Taggayt:Vietnam]]
