*Empty MediaWiki Message*

--- a/Thanh_Hoa.mw
+++ b/Thanh_Hoa.mw
@@ -1,4 +1,4 @@
-[[Tugna:Thanh Hoa2.jpg|300px|right|thumb|Thanh Hoa]]
-Tamanaɣt n tmurt n Thanh Hoa, [[Vietnam]]. Tettwassen s isem n temdint n tafat.
+{{Databox}}
+'''Thanh Hoa''' d tamanaɣt n tmurt n Thanh Hoa, [[Vietnam]]. Tettwassen s isem n temdint n tafat.
 
 [[Taggayt:Vietnam]]
