*Empty MediaWiki Message*

--- a/Takurt_n_Ufus.mw
+++ b/Takurt_n_Ufus.mw
@@ -1,3 +1,4 @@
+{{Databox}}
 '''Takurt n ufus''' (fr/en : ''Handball'') d addal ay tturarent snat teɣlamin (équipes) deg wenrar (terrain). 
 
 ==Ilugan n wurar==
