*Empty MediaWiki Message*

--- a/Pitch_Black.mw
+++ b/Pitch_Black.mw
@@ -1,3 +1,4 @@
+{{Databox}}
 '''Pitch Black''' (anamk-ines s Tmaziɣt: ''Tallest tuẓẓift'') d yiwen usaru (afilm) Amerikan n tsugint tussnant itwagg di useggwas n 2000, i -t David Twohy, yirar deg-s usegbar Amerikan [[Vin Diesel]]. Asaru-yagi itwagg s $23 imelyan, issidf-d $53 imelyan.
 
 Asaru-a iggur ɣef yiwen ubekkaḍ i wumi qqaren-as Richard B. Riddick (Vin Diesel) itwaksi deg yiwet teɣbarrut (ababor) n tallunt ɣer tkurmut deg yiwen ublanit. Awaren i armi tuwḍa teɣrrabut n tallunt-nni g yiwen ublanit yuzɣen, Riddick irwel si tɣrrabut. Maca aql-it dinna kan iɣersiwen ttffɣn-d akid-sen xminni teɣli tfukt. Marra medden-nni i ttugha yellan di teɣrrabut fell-asen ad rwlen si ublanit-nni s yiwen usafag, maca manaynni iqseḥ aṭas.
