--- a/Lmeṭmer.mw
+++ b/Lmeṭmer.mw
@@ -1,3 +1,4 @@
+{{Databox}}
 '''Lmetmar''' (s tefṛensist: ''El Matmar''), d taɣiwant n twilayt n [[Iɣil Izzan|Yiɣil Izzan]], zedɣen-tt 14.533 n yimezdaɣen. 
 Deg tallit n tuṭṭfa tafrensist llan ɣɣaren-as ''Clinchant''.
 
