*Empty MediaWiki Message*

--- a/Jdiwya.mw
+++ b/Jdiwya.mw
@@ -1,3 +1,4 @@
+{{Databox}}
 '''Jidiweyya''' (s tefrensist: ''Djidiouia''), d taɣiwant n twilayt n [[Iɣil Izzan|Yiɣil Izzan]], zedɣen-tt 29.263 n yimezdaɣen. Deg tallit n tuṭṭfa tafṛensist llan ɣɣaren-as ''Saint-Aimé''.
 
 [[Category:Taɣiwant n Yiɣil Izzan]]
