*Empty MediaWiki Message*

--- a/Nnil.mw
+++ b/Nnil.mw
@@ -1,3 +1,4 @@
+{{Databox}}
 [[Asif n Nnil]] d asif i ɣezzifen akk di Tafriqt. Tuɣzi-s d ugar n 6,500 km. Aɣbalu-nes yezga-d seg ugelmin n Victoria di tmurt n [[Uganda]]. Ideggeṛ iman-is di [[Maṣer]] deg yilel Agrakal. 
 
 
