*Empty MediaWiki Message*

--- a/Akabar_Asduklan_Azzayri.mw
+++ b/Akabar_Asduklan_Azzayri.mw
@@ -1,15 +1,15 @@
-'''Akabar Asduklan Adzayri''' (s tefrensist: ''Parti Communiste Algérien''), d akabar asduklan ay d-sbedden yimeɣnasen ifrensisen n [[Dzayer]] ([[iḍarren iberkanen]]) akked yineṣliyen idzayriyen. 
+'''Akabar Asduklan Azzayri''' (s tefrensist: ''Parti Communiste Algérien''), d akabar asduklan ay d-sbedden yimeɣnasen ifrensisen n [[Lezzayer]] ([[iḍarren iberkanen]]) akked yineṣliyen izzayriyen. 
 
 ==Tallalit==
 
-Akabar-a ilul-d deg 1920 yerna yella d afurk n [[Akabar Asduklan Afrensis|Ukabar Asduklan Afrensis]]. Maca deg 1936, yeqqel d akabar i yiman-nnes (s uttekki n [[Maurice Laban]]), yerna amaru-nnes amatu d ameɣnas adzayri [[Lbacir Ḥaǧ Aɛli]]. 
+Akabar-a ilul-d deg 1920 yerna yella d afurk n [[Akabar Asduklan Afrensis|Ukabar Asduklan Afrensis]]. Maca deg 1936, yeqqel d akabar i yiman-nnes (s uttekki n [[Maurice Laban]]), yerna amaru-nnes amatu d ameɣnas azzayri [[Lbacir Ḥaǧ Aɛli]]. 
 
-==Akabar ed Wemgaru n Dzayer==
+==Akabar d Wemgaru n Lezzayer==
 
-Deg tezwara n 1955, Akabar Asduklan Adzayri yugi imenɣi imselleḥ n Yidzayriyen i lmend n uzarug (indépendance) n tmurt-nsen, maca deg [[Yunyu]] n useggas-nni, akabar-a yeqbel imenɣi-a yerna iga ifadden i yimeɣnasen-nnes akken ad ttekkin deg yimenɣi ɣer yidis n Yidzayriyen, d aya ay yejjan [[Fransa]] ad t-tegdel. Imeɣnasen n ukabar-a ttekkan deg kra n tiytiwin deg wemgaru n Ldzayer, gar-asent tadyant ay d-yellan deg 1956, aydeg [[Henri Maillot]], yiwen seg yimeɣnasen-nnes, yesserwel yiwen n ukamyun n yemrigen (leslaḥat) i yemjuhad. 
+Deg tezwara n 1955, Akabar Asduklan Azzayri yugi imenɣi imselleḥ n Yizzayriyen i lmend n uzarug (indépendance) n tmurt-nsen, maca deg [[Yunyu]] n useggas-nni, akabar-a yeqbel imenɣi-a yerna iga ifadden i yimeɣnasen-nnes akken ad ttekkin deg yimenɣi ɣer yidis n Yizzayriyen, d aya ay yejjan [[Fransa]] ad t-tegdel. Imeɣnasen n ukabar-a ttekkan deg kra n tiytiwin deg wemgaru n Lezzayer, gar-asent tadyant ay d-yellan deg 1956, aydeg [[Henri Maillot]], yiwen seg yimeɣnasen-nnes, yesserwel yiwen n ukamyun n yemrigen (leslaḥat) i yemjuhad. 
 
 ==Sakkin Uzarug : Tagdalt==
 
-Deg 1962, asmi ay tuwey Ldzayer azarug-nnes, anabaḍ (lḥukuma) adzayri yesteɛref s Ukabar Asduklan Adzayri, maca deg 1964, yegdel-it yerna yefsex-it. D aya ay yejjan amur ameqran seg yesduklanen idzayriyen ad ɛawden ad msegrawen ed ad d-sbedden [[Akabar n Tnezwart Tanemlayt]] (PAGS).
+Deg 1962, asmi ay tuwey Lezzayer azarug-nnes, anabaḍ (lḥukuma) azzayri yesteɛref s Ukabar Asduklan Azzayri, maca deg 1964, yegdel-it yerna yefsex-it. D aya ay yejjan amur ameqran seg yesduklanen izzayriyen ad ɛawden ad msegrawen ed ad d-sbedden [[Akabar n Tnezwart Tanemlayt]] (PAGS).
 
 [[Category:Tasertit]][[Category:Akabar asertay]]
