*Empty MediaWiki Message*

--- a/Akabar_Asduklan_Azzayri.mw
+++ b/Akabar_Asduklan_Azzayri.mw
@@ -1,3 +1,4 @@
+{{Databox}}
 '''Akabar Asduklan Azzayri''' (s tefrensist: ''Parti Communiste Algérien''), d akabar asduklan ay d-sbedden yimeɣnasen ifrensisen n [[Lezzayer]] ([[iḍarren iberkanen]]) akked yineṣliyen izzayriyen. 
 
 ==Tallalit==
