*Empty MediaWiki Message*

--- a/Saratov.mw
+++ b/Saratov.mw
@@ -1,4 +1,4 @@
-[[Tugna:Saratov evening.JPG|thumb|right|250px|Saratov]]
+{{Databox}}
 '''Saratov''' d tamdint deg wanẓul n [[Rrus]].
 
 [[Category:Timdinin]]
