*Empty MediaWiki Message*

--- a/Tazunegzirt_n_Balqan.mw
+++ b/Tazunegzirt_n_Balqan.mw
@@ -1,3 +1,4 @@
+{{Databox}}
 '''Tazunegzirt n Balqan''' d tazunegzirt (péninsule) n wenẓul-agmuḍan n [[Turuft]], d tin aydeg d-zgant tmura n [[Albanya]], [[Busnya ed Hirziguvina]], [[Bulgarya]], [[Kruwatya]], [[Legrig]], [[Masidunya]], [[Montenegro]], [[Serbya]], [[Kosovo]] ed weḥric n [[Ṭṭerk]] ay d-yezgan deg Turuft. Tajumma-nnes 550.000 km2 (yikilumitren imkuẓen). Zedɣen-tt azal n 50 n yimelyunen n yimezdaɣen.
 
 [[Category:Tarakalt]][[Category:Turuft]]
