*Empty MediaWiki Message*

--- a/Herbert_George_Wells.mw
+++ b/Herbert_George_Wells.mw
@@ -1,5 +1,5 @@
-[[File:H.G. Wells by Beresford.jpg|thumb|H. G. Wells (1920)]]
-'''Herbert George Wells''' d amaru ingliz, illul-d deg 21 ctanmbir 1866, immut g 13 ɣuct 1946.
+{{Databox}}
+'''Herbert George Wells''' d amaru ingliz, illul-d deg 21 ctanmbir 1866, yemmut deg 13 ɣuct 1946.
 
 ==Idlisen-nnes==
 
