*Empty MediaWiki Message*

--- a/Microsoft.mw
+++ b/Microsoft.mw
@@ -1,3 +1,4 @@
+{{Databox}}
 '''''{{lang|en|Microsoft Corporation}}''''' d taṛmist n tsenselkimt d tamikṛusenselkimt agettaɣlant [[Iwunak idduklen n Marikan|tamarikanit]], tettwassebded sɣur [[Bill Gates]] d [[Paul Allen]]. Armud ines amezzwaru d taneflit d ussenzi n [[Anagraw n wammud|inagrawen n wammud]] akkw d [[aseɣẓan|iseɣẓanen]].
 
 [[Category:Tasenselkimt]][[Category:Tarmist]]
