*Empty MediaWiki Message*

--- a/Charles_de_Gaulle.mw
+++ b/Charles_de_Gaulle.mw
@@ -1,4 +1,4 @@
-[[Tugna:Charles de Gaulle 1943 Tunisia.jpg|right|thumb|Charles de Gaulle]]
+{{Databox}}
 '''Charles de Gaulle''' isem-is ameqqran, Charles André Joseph de Gaulle, yella d aselway n [[Fransa]]. ilul-d ass 22 nwember n 1890 g [[Lille]] (agafa n Fransa), yemmut ass n 9 nwember 1970 g Colombey-les-Deux-Eglises, [[Haute-Marne]].
 
 [[Taggayt:Tameddurt|Gaulle, Charles de]]
