--- a/Beccar.mw
+++ b/Beccar.mw
@@ -1,3 +1,4 @@
+{{Databox}}
 '''Beccar''' (s [[Taɛrabt]]: ''بشار''), d tamanaɣt n twilayt n [[Beccar]]. Zedɣen-tt 165,627 n yimezdaɣen. Deg tallit n tuṭṭfa tafrensist, llan ɣɣaren-as ''Colomb-Béchar''.
 
 [[Category:Taɣiwant n Beccar]]
