--- a/Timidelt_n_At_Ḥemmad.mw
+++ b/Timidelt_n_At_Ḥemmad.mw
@@ -1,3 +1,4 @@
+{{Databox}}
 '''Taqliɛt n At Ḥemmad''' d yiwet n temdint taqbuṛt ay d-yezgan deg tama n [[Tamslit|Msila]], deg tlemmast n tmurt n [[Ledzayer]]. Ar ass-a, mazal nezmer ad nwali llsisan n kra n yexxamen, ɣas akken, kullci deg-s yessusem tura : ad as-tiniḍ werjin yeɛmiṛ wemkan-nni. D acu kan, Taqliɛt n At Ḥemmad, tella, zik-is, seg temdinin mechuṛen akk deg [[Tamazɣa|Tmazɣa]]. D tamaneɣt meqqren, yesɛan tasɣent s wazal-is deg umezruy n Yimaziɣen.
 
 ==Alluy n twacult n [[At Ḥemmad]] ed waṣuk n teqliɛt==
