--- a/Butan.mw
+++ b/Butan.mw
@@ -1,3 +1,4 @@
+{{Databox}}
 '''Butan''' d tamurt n wenẓul (sud) n [[Asya]], tezga-d deg yedraren n [[Himalaya]], gar [[Lhend]] ed [[Ccinwa]]. Tajumma-nnes 38.394 km2 (yikilumitren imkuẓen). Zedɣen-tt 691.141 n yimezdaɣen (Ibutaniyen). Tamaneɣt-nnes d [[Timfu]].
 
 [[Category:Timura n Asya]]
