*Empty MediaWiki Message*

--- a/Tafersit.mw
+++ b/Tafersit.mw
@@ -1,3 +1,4 @@
+{{Databox}}
 '''Tafersit''' (s [[tefṛensist]]: ''Tafersit''), d tamdint n ugafa n [[Merruk]] deg [[Arrif]], tezga-d deg temnaṭ n [[Tanegmuḍt|Tnegmuḍt]]. Zedɣen-tt 3,555 n yimezdaɣen.
 
 [[Category:Arrif]][[Category:Merruk]]
