*Empty MediaWiki Message*

--- a/Tusmulin.mw
+++ b/Tusmulin.mw
@@ -1,2 +1,3 @@
+{{Databox}}
 '''Tusmulin''' d yiwet tɣiwant n twilayt n [[Lbeyyeḍ]]. Tesɛa 881,10 km2 deg tjumma-s, yerna deg 2008 ɣur-es azal n 3,155 imezdaɣ. 
 [[Category:Taɣiwant n Lbeyyeḍ]]
